--- a/frontend/src/app/styles/globals.scss
+++ b/frontend/src/app/styles/globals.scss
@@ -80,7 +80,9 @@ body {
   //   rgba(11, 11, 11, 1) 35%,
   //   rgba(11, 11, 11, 1) 100%
   // );
+}
 
+.bg {
   background-size: 100% 100%;
   background-position: 0px 0px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
   background-image: linear-gradient(1deg, #000000ff 0%, #073aff00 100%),
@@ -115,10 +117,24 @@ body {
   }
 }
 
+.max-80 {
+  max-width: 80%;
+}
+
+.align-center {
+  display: flex;
+  align-items: center;
+}
+
+.justify-center {
+  display: flex;
+  justify-content: center;
+}
+
 .auth-form {
   flex: 100;
   align-items: center;
-  max-width: 80%;
+
   margin-bottom: 20px;
   // padding: 20px;
   .heading {
@@ -174,49 +190,6 @@ body {
   }
 }
 
-// .lds-ripple {
-//   display: inblock;
-//   position: relative;
-//   width: 40px;
-//   height: 40px;
-// }
-// .lds-ripple div {
-//   position: absolute;
-//   border: 4px solid #fff;
-//   opacity: 1;
-//   border-radius: 50%;
-//   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-// }
-// .lds-ripple div:nth-child(2) {
-//   animation-delay: -0.5s;
-// }
-// @keyframes lds-ripple {
-//   0% {
-//     top: 36px;
-//     left: 36px;
-//     width: 0;
-//     height: 0;
-//     opacity: 0;
-//   }
-//   4.9% {
-//     top: 36px;
-//     left: 36px;
-//     width: 0;
-//     height: 0;
-//     opacity: 0;
-//   }
-//   5% {
-//     top: 36px;
-//     left: 36px;
-//     width: 0;
-//     height: 0;
-//     opacity: 1;
-//   }
-//   100% {
-//     top: 0px;
-//     left: 0px;
-//     width: 72px;
-//     height: 72px;
-//     opacity: 0;
-//   }
-// }
+#login-form {
+  max-width: 60%;
+}
