--- a/frontend/src/app/styles/navbar.css
+++ b/frontend/src/app/styles/navbar.css
@@ -2,6 +2,10 @@
   display: flex;
   padding: 5px;
   height: 60px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
   border-bottom: 1px solid #eff3f7;
 }
 #navbar .logo {
