--- a/frontend/src/app/styles/navbar.css
+++ b/frontend/src/app/styles/navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   padding: 5px;
   height: 60px;
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   background-color: white;
