--- a/frontend/src/app/styles/navbar.scss
+++ b/frontend/src/app/styles/navbar.scss
@@ -4,7 +4,7 @@
   display: flex;
   padding: 5px;
   height: 60px;
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   background-color: white;
