--- a/frontend/src/app/styles/utilities/_variables.scss
+++ b/frontend/src/app/styles/utilities/_variables.scss
@@ -7,6 +7,7 @@ $color-faded-text: rgb(171, 171, 171);
 $color-black: rgb(27, 27, 27);
 $color-brand: #2b5ee3;
 $color-grey: rgb(171, 171, 171);
+$color-flat-grey: #fafafa;
 
 // Background Variables
 $bg-navbar: #141414;
