--- a/frontend/src/app/styles/dashboard.css
+++ b/frontend/src/app/styles/dashboard.css
@@ -58,4 +58,37 @@
 }
 #dashboard__list__jobs .job_item .job__item__subtitle {
   font-size: 14px;
+}
+
+.ReactModal__Content input {
+  width: 200px;
+  border: 0.6px solid #e2e2e2;
+  background: #f6f6f6;
+}
+
+.create-job-form {
+  transition: all ease-in-out 300ms;
+  flex: 100;
+  width: 600px;
+}
+.create-job-form input {
+  width: 100%;
+}
+
+.dashboard__sidebar {
+  background-color: #2b5ee3;
+}
+.dashboard__sidebar div {
+  color: white !important;
+}
+
+@media screen and (max-width: 800px) {
+  .create-job-form {
+    width: 450px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .create-job-form {
+    width: 250px;
+  }
 }/*# sourceMappingURL=dashboard.css.map */
