--- a/frontend/src/app/styles/utilities/_variables.scss
+++ b/frontend/src/app/styles/utilities/_variables.scss
@@ -8,6 +8,7 @@ $color-black: rgb(27, 27, 27);
 $color-brand: #2b5ee3;
 $color-grey: rgb(171, 171, 171);
 $color-flat-grey: #fafafa;
+$color-mute-grey: rgba(171, 141, 255, 0.04);
 
 // Background Variables
 $bg-navbar: #141414;
@@ -18,6 +19,8 @@ $bg-sidebar: rgb(235, 235, 235);
 $bg-input: #f8f8f8;
 
 // Size Variables
+$size-title: 60px;
+$size-heading: 40px;
 $size-title: 60px;
 $size-default-text: 16px;
 $size-button: 16px;
@@ -33,12 +36,12 @@ $text-lighter-grey: rgb(234, 234, 234);
 $text-light-light-grey: #737373;
 $text-border-grey: #d6d6d6;
 $text-white: white;
-$text-heading-size: 30px;
+$text-heading-size: 35px;
 $text-small-size: 12px;
 $text-body-size: 16px;
 
 // Other Variables
-$border-edge: rgb(156, 156, 156);
+$border-edge: #c8c8c8;
 $button-bg: hsl(214, 93%, 60%);
 $button-bg-hover: hsl(214, 93%, 50%);
 $button-border-rad: 50px;
