--- a/frontend/src/app/styles/dashboard.css
+++ b/frontend/src/app/styles/dashboard.css
@@ -1,3 +1,7 @@
+.hide {
+  display: none;
+}
+
 #dashboard {
   min-height: calc(100vh - 60px);
   display: grid;
@@ -95,6 +99,9 @@
 .dashboard__form .heading .form__options .form__option.selected {
   opacity: 100%;
   border-bottom: 2px solid #2b5ee3;
+}
+.dashboard__form label {
+  display: block;
 }
 .dashboard__form input {
   width: 100%;
