Minor frontend changes

--- a/frontend/src/app/styles/dashboard.scss
+++ b/frontend/src/app/styles/dashboard.scss
@@ -17,40 +17,30 @@
   background-color: white;
   height: 100%;
   padding: 20px;
+
+  border-top: 1px solid $color-grey;
 }
 
 // .dashboard__content {
 //   padding: 20px;
 // }
-.dashboard__data__header {
-  padding-bottom: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
-  
-  .button-wrapper {
-    margin: 0;
-    button {
-      padding: 0 40px;
-      height: 39.5px;
-    }
-  }
-}
 
 .dashboard__content__header {
   display: flex;
-  gap: 20px;
+  gap: 60px;
   flex-direction: row;
   align-items: center;
-  padding-bottom: 20px;
-  padding-left: 20px;
+  padding: 40px;
+  flex-wrap: wrap;
 }
 
 .dashboard__status {
   padding: 5px 30px;
-  border-radius: 30px;
+  border-radius: 5px;
   display: inline-block;
+
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
 .dashboard__heading {
@@ -67,17 +57,16 @@
     // max-width: 400px;
     padding: 5px 10px;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 3px;
     position: relative;
 
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    box-shadow: rgba(0, 0, 0, 0.099) 0px 1px 4px;
 
     transition: all ease-in-out $transition-speed;
     &:hover {
       cursor: pointer;
       background-color: rgb(244, 244, 244);
     }
-
 
     .job__item__icon {
       position: absolute;
@@ -92,7 +81,6 @@
       white-space: nowrap;
       height: 20px;
       text-overflow: ellipsis;
-      
     }
 
     .job__item__subtitle {
@@ -162,23 +150,42 @@
   }
 }
 
+.dashboard__data__header {
+  padding-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  flex-wrap: wrap;
+
+  .button-wrapper {
+    margin: 0;
+    button {
+      padding: 0 40px;
+      height: 39.5px;
+    }
+  }
+}
+
 .dashboard__search__container {
   padding: 0 10px;
   border-radius: 5px;
   background-color: $color-flat-grey;
+  border: 1px solid $color-grey;
+  flex-wrap: wrap;
   input {
     padding: 10px 0;
     color: grey;
-    border: none  ;
+    border: none;
     flex: 100;
     background-color: inherit;
     outline: 0;
-  } 
+  }
 
   .input__wrapper {
     display: flex;
     align-items: center;
-    gap: 20px
+    gap: 20px;
   }
 
   .dashboard__seach__container__icon {
