--- a/frontend/src/app/styles/utilities/_variables.scss
+++ b/frontend/src/app/styles/utilities/_variables.scss
@@ -6,7 +6,7 @@ $color-rufous: #a72608;
 $color-faded-text: rgb(171, 171, 171);
 $color-black: rgb(27, 27, 27);
 $color-brand: #2b5ee3;
-$color-grey: rgb(171, 171, 171);
+$color-grey: #eaeaea;
 $color-flat-grey: #fafafa;
 $color-mute-grey: rgba(171, 141, 255, 0.04);
 
@@ -50,4 +50,4 @@ $border-radius: 6px;
 
 $inputHeight: 40px;
 $btn-hover-darken-percentage: 10%;
-$transition-speed: 50ms;
+$transition-speed: 100ms;
