--- a/frontend/src/app/styles/dashboard.css
+++ b/frontend/src/app/styles/dashboard.css
@@ -13,36 +13,24 @@
   background-color: white;
   height: 100%;
   padding: 20px;
-}
-
-.dashboard__data__header {
-  padding-bottom: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
-}
-.dashboard__data__header .button-wrapper {
-  margin: 0;
-}
-.dashboard__data__header .button-wrapper button {
-  padding: 0 40px;
-  height: 39.5px;
+  border-top: 1px solid #eaeaea;
 }
 
 .dashboard__content__header {
   display: flex;
-  gap: 20px;
+  gap: 60px;
   flex-direction: row;
   align-items: center;
-  padding-bottom: 20px;
-  padding-left: 20px;
+  padding: 40px;
+  flex-wrap: wrap;
 }
 
 .dashboard__status {
   padding: 5px 30px;
-  border-radius: 30px;
+  border-radius: 5px;
   display: inline-block;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
 .dashboard__heading {
@@ -58,10 +46,10 @@
 #dashboard__list__jobs .job_item {
   padding: 5px 10px;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 3px;
   position: relative;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  transition: all ease-in-out 50ms;
+  box-shadow: rgba(0, 0, 0, 0.099) 0px 1px 4px;
+  transition: all ease-in-out 100ms;
 }
 #dashboard__list__jobs .job_item:hover {
   cursor: pointer;
@@ -133,10 +121,28 @@
   color: white !important;
 }
 
+.dashboard__data__header {
+  padding-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+.dashboard__data__header .button-wrapper {
+  margin: 0;
+}
+.dashboard__data__header .button-wrapper button {
+  padding: 0 40px;
+  height: 39.5px;
+}
+
 .dashboard__search__container {
   padding: 0 10px;
   border-radius: 5px;
   background-color: #fafafa;
+  border: 1px solid #eaeaea;
+  flex-wrap: wrap;
 }
 .dashboard__search__container input {
   padding: 10px 0;
