--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Open+Sans:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
@@ -21,7 +21,7 @@ body {
   border: none;
   padding: 5px;
   cursor: pointer;
-  transition: all ease-in-out 50ms;
+  transition: all ease-in-out 100ms;
 }
 
 .section__header {
@@ -38,7 +38,7 @@ body {
 }
 
 .bold-text {
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .accent-text {
