--- a/frontend/src/app/styles/globals.scss
+++ b/frontend/src/app/styles/globals.scss
@@ -1,5 +1,5 @@
 // @import "bootstrap";
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Open+Sans:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap');
 @import './utilities/variables';
 
 * {
@@ -44,7 +44,7 @@ body {
 }
 
 .bold-text {
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .accent-text {
@@ -177,8 +177,6 @@ body {
       margin-left: 10px;
     }
   }
-
-
 }
 
 .button-wrapper {
