Updated search function

--- a/frontend/src/app/styles/dashboard.css
+++ b/frontend/src/app/styles/dashboard.css
@@ -37,13 +37,13 @@
   font-size: 50px;
 }
 
-#dashboard__list__jobs {
+.dashboard__list__jobs {
   padding-top: 40px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 250px));
   gap: 40px;
 }
-#dashboard__list__jobs .job_item {
+.dashboard__list__jobs .job_item {
   padding: 5px 10px;
   background-color: white;
   border-radius: 3px;
@@ -51,23 +51,23 @@
   box-shadow: rgba(0, 0, 0, 0.099) 0px 1px 4px;
   transition: all ease-in-out 100ms;
 }
-#dashboard__list__jobs .job_item:hover {
+.dashboard__list__jobs .job_item:hover {
   cursor: pointer;
   background-color: rgb(244, 244, 244);
 }
-#dashboard__list__jobs .job_item .job__item__icon {
+.dashboard__list__jobs .job_item .job__item__icon {
   position: absolute;
   right: -10px;
   top: -10px;
 }
-#dashboard__list__jobs .job_item .job__item__title {
+.dashboard__list__jobs .job_item .job__item__title {
   overflow: hidden;
   font-weight: 600;
   white-space: nowrap;
   height: 20px;
   text-overflow: ellipsis;
 }
-#dashboard__list__jobs .job_item .job__item__subtitle {
+.dashboard__list__jobs .job_item .job__item__subtitle {
   font-size: 14px;
 }
 
