--- a/frontend/src/app/styles/globals.scss
+++ b/frontend/src/app/styles/globals.scss
@@ -179,6 +179,11 @@ body {
   }
 }
 
+.Toastify__toast-container {
+  z-index: 9999999999999999;
+  
+}
+
 .button-wrapper {
   color: white;
   button {
