--- a/frontend/src/app/styles/dashboard.css
+++ b/frontend/src/app/styles/dashboard.css
@@ -69,11 +69,13 @@
   position: relative;
 }
 .job__item__wrapper .job__item__icon {
+  font-smooth: 100;
+  transform: rotate(45deg);
   position: absolute;
   right: -10px;
   top: -10px;
-  scale: 1.1;
-  fill: red;
+  scale: 1.2;
+  fill: rgb(252, 67, 67);
   transition: all ease-in-out 600ms;
   cursor: pointer;
 }
@@ -227,6 +229,32 @@
   cursor: pointer;
 }
 
+.skeleton-job-wrapper .job_item {
+  padding: 10px;
+}
+
+.skeleton {
+  opacity: 0.8;
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+.skeleton-text {
+  width: 100%;
+  height: 7px;
+}
+
+.skeleton-text-small {
+  width: 50%;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 70%);
+  }
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
+}
 @media screen and (max-width: 800px) {
   .dashboard__form {
     width: 450px;
