--- a/frontend/src/app/styles/dashboard.scss
+++ b/frontend/src/app/styles/dashboard.scss
@@ -292,6 +292,10 @@
   width: 50%;
 }
 
+.doc-wrapper {
+  margin-bottom: 30px;
+}
+
 @keyframes skeleton-loading {
   0% {
     background-color: hsl(200, 20%, 70%);
